# OVN

./: .gitignore  LICENSE  Makefile  Makefile.conf  OVN.extraction.Test.ovn_test_10.wasm  OVN.extraction.Test.ovn_test_20.wasm  OVN.extraction.Test.ovn_test_5.wasm  README.md  TODO.md  _CoqProject  coq-ovn.opam  coq-ovn.opam.locked  hacspec_translation_modificatons.txt
.github/: coq-ovn.opam.locked
.github/workflows/: build.yml  lint-opam.yml  refresh-cache.yml
extra/: header.html
extra/resources/coqdocjs/: coqdocjs.js
hax/: .gitignore  coq-hacspec-ssprove.opam  coq-hacspec-ssprove.opam.template  dune-project  setup.sh
hax/engine/: hax-engine.install
hax/engine/backends/coq/ssprove/: ssprove_backend.ml
hax/engine/lib/: attr_payloads.ml
hax/hax-lib-macros/src/: lib.rs
hax/hax-lib-macros/types/src/: lib.rs
hax/opam/: coq-hacspec-ssprove.opam  coq-hacspec-ssprove.opam.template
hax/proof-libs/coq/ssprove/src/: ChoiceEquality.v  ConCertLib.v  Hacspec_Lib.v  Hacspec_Lib_Coercions.v  Hacspec_Lib_Comparable.v  Hacspec_Lib_Controlflow.v  Hacspec_Lib_Eq.v  Hacspec_Lib_Integers.v  Hacspec_Lib_Loops.v  Hacspec_Lib_Ltac.v  Hacspec_Lib_Monad.v  Hacspec_Lib_Natmod.v  Hacspec_Lib_Notation.v  Hacspec_Lib_Pre.v  Hacspec_Lib_Seq.v  Hacspec_Lib_TODO.v  LocationUtility.v  dune
hax/test-harness/src/snapshots/: toolchain__assert into-ssprove.snap  toolchain__enum-repr into-ssprove.snap  toolchain__guards into-ssprove.snap  toolchain__let-else into-ssprove.snap  toolchain__reordering into-ssprove.snap  toolchain__side-effects into-ssprove.snap
rust_src/: .gitignore  ovn_group.rs  ovn_traits.rs
rust_src/bip-340/: Cargo.toml
rust_src/concordium/: Cargo.toml
rust_src/concordium-derive/: Cargo.toml
rust_src/concordium-derive/src/: lib.rs
rust_src/concordium/src/: concordium.rs  concordium_impls.rs  concordium_prims.rs  concordium_types.rs  test_infrastructure.rs
rust_src/hacspec/coq_ssprove/: coq-hacspec-ssprove.opam
rust_src/hacspec/examples/aes_jazz/: Cargo.toml
rust_src/hacspec/examples/coverage_test/: Cargo.toml
rust_src/hacspec/examples/pearlite-example/: Cargo.toml
rust_src/hacspec/examples/xor/: Cargo.toml
rust_src/hacspec/lib/src/: bigint_integers.rs
rust_src/ovn/: Cargo.toml
rust_src/ovn/proofs/ssprove/: Makefile.conf  _CoqProject  sed.sh
rust_src/ovn/proofs/ssprove/extraction/: Hacspec_ovn.v  Hacspec_ovn_Ovn_group.v  Hacspec_ovn_Ovn_secp256k1.v  Hacspec_ovn_Ovn_traits.v  Hacspec_ovn_Ovn_z18446744073709551557.v  Hacspec_ovn_Ovn_z89.v
rust_src/ovn/src/: lib.rs  ovn_group.rs  ovn_libcrux.rs  ovn_secp256k1.rs  ovn_traits.rs  ovn_z115792089237316195423570985008687907853269984665640564039457584007913129639747.rs  ovn_z18446744073709551557.rs  ovn_z89.rs  ovn_z_bigint.rs  ovn_zkcrypto.rs  ovn_zkgroup.rs
rust_src/ovn/tests/: ovn_examples.rs
rust_src/sha256/: Cargo.toml
theories/: Main.v
theories/boardroomVoting/: BoardroomMath.v  BoardroomVoting.v  BoardroomVotingExtractionCameLIGO.v  BoardroomVotingExtractionLiquidity.v  BoardroomVotingTest.v  BoardroomVotingZ.v
theories/extraction/: ConCert_ovn.v  OVN.extraction.Test.ovn_test_10.cwasm  OVN.extraction.Test.ovn_test_10.wasm  OVN.extraction.Test.ovn_test_100.wasm  OVN.extraction.Test.ovn_test_20.cwasm  OVN.extraction.Test.ovn_test_5.cwasm  OVN.extraction.Test.ovn_test_5.wasm  OVN_Z.v  OVN_sint.v  OVN_uint.v  Test.v  run.py
theories/hacspec/: Hacspec_helpers.v  Hacspec_ovn.v  Hacspec_ovn_Ovn_traits.v  Hacspec_ovn_Ovn_z_89_.v  Hacspec_ovn_group_and_field.v  Hacspec_ovn_or.v  Hacspec_ovn_proof_z_89.v  Hacspec_ovn_proofs.v  Hacspec_ovn_schnorr.v  Hacspec_ovn_sigma_setup.v  Hacspec_ovn_to_sigma.v  Hacspec_ovn_total_proof.v  Hacspec_sigma_example.v
theories/ovn/: OVN.v
theories/ssprove/: Schnorr.v
