opam-version: "2.0"
name: "coq-ovn"
version: "dev"
synopsis: "Verified implementation of the Open Vote Network protocol"
description: """
Verified implementation of the Open Vote Network protocol
"""
maintainer: "todo"
authors: "REDACTED"
license: "MIT"

depends: [
  "ocaml"
  "dune" {>= "3.8"}
  "base" {>= "0.16.2"}
  "coq-stdpp"
  "coq-mathcomp-word" {>= "3.2"}
  "coq-mathcomp-zify" {>= "1.5.0+2.0+8.16"}
  "coq-concert" {= "dev"}
  "coq" {>= "9.0.0"}
  "coq-ssprove" {= "0.2.4"}
  # "coq-hacspec-ssprove" {= "dev"}
]

pin-depends: [
  ["coq-concert.dev" "git+https://github.com/AU-COBRA/ConCert.git#10768763dd8fc64e7d01181e79d88f0e6b972c0b"]
]

build: [
  [make "theory"]
]
install: [
  [make "install"]
]
