opam-version: "2.0"
name: "coq-ovn"
version: "dev"
synopsis: "Verified implementation of the Open Vote Network protocol"
description: """
Verified implementation of the Open Vote Network protocol
"""
maintainer: "todo"
authors: "REDACTED"
license: "MIT"

depends: [
  "ocaml"
  "dune" {>= "3.8"}
  "base" {>= "0.16.2"}
  "coq-stdpp"
  "coq-mathcomp-ssreflect" {= "2.3.0"}
  "coq-mathcomp-classical" {= "1.8.0"}
  "coq-mathcomp-word" {>= "3.2"}
  "coq-mathcomp-zify" {>= "1.5.0+2.0+8.16"}
  "coq-concert" {= "dev"}
  "coq-certicoq" {= "dev"}
  "coq" {>= "9.0.0"}
  "coq-ssprove" {= "0.2.4"}
  # "coq-hacspec-ssprove" {= "dev"}
]

pin-depends: [
  ["coq-concert.dev" "git+https://github.com/AU-COBRA/ConCert.git#f5c4cdd0eced3dc4e9a7e5a58461c4fe4f71f89b"]
  ["coq-certicoq.dev" "git+https://github.com/4ever2/certicoq.git#ca7f35d8939c0ba2bb50dd3d9fa8b417c8189758"]
]

build: [
  [make "theory"]
]
install: [
  [make "install"]
]
