(lang dune 3.8)
(using coq 0.8)
(generate_opam_files true)
(name coq-hacspec-ssprove)

(package
 (name coq-hacspec-ssprove)
 (synopsis "A short synopsis")
 (description "A longer description")
 (maintainers "REDACTED")
 (authors "REDACTED")
 (depends
        ocaml
        dune
        (base (>= "0.16.2"))
	(coq-ssprove (= "0.2.4"))
	coq-stdpp
	(coq-mathcomp-word (>= "3.0"))
	(coq-mathcomp-zify (>= "1.5.0+2.0+8.16"))
	(coq-concert (= "dev"))
	(coq-extructures (>= "0.5.0"))
	(coq (>= "9.0.0"))
        )
 (tags
  (topics "to describe" your project)))
