[package]
name = "hacspec-concordium"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
path = "src/concordium.rs"

[dependencies]
hax-lib-macros = { path = "../../hax/hax-lib-macros/" }
concordium-contracts-common = { git = "https://github.com/Concordium/concordium-contracts-common", rev = "84ff7db509ca1fbf958b47e5e5903b7662295850", version = "=2.0.0", default-features = false }
hacspec-concordium-derive = { path = "../concordium-derive" }

# Reduce code size, at the cost of performance in allocation heavy-code.
wee_alloc="0.4.5"
bls12_381 = "0.8"
group = "0.13"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"

[features]
hax_compilation = []