[package]
name = "hacspec-ovn"
version = "0.1.0"
authors = ["Lasse Letager Hanse <letager@cs.au.dk>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
# hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }
# hax-lib = { git = "https://github.com/hacspec/hax.git" }
# hax-lib = { path = "../../hax/hax-lib/" }
# hax-lib = { git = "https://github.com/hacspec/hax" }
# hax-lib-macros = { path = "../../hax/hax-lib-macros/" }
# hacspec-bip-340 = { path = "../bip-340/" }
# hacspec-concordium = { path = "../concordium" } # 4d4b024b547a1f120f6d6951cbc409c94f8f146a
# hacspec-concordium-derive = { path = "../concordium-derive" } # 4d4b024b547a1f120f6d6951cbc409c94f8f146a
# group = "0.13"
# rand_core = "0.6"

concordium-std = { git = "https://github.com/Concordium/concordium-rust-smart-contracts.git", rev="4d4b024b547a1f120f6d6951cbc409c94f8f146a" }
concordium-std-derive = { git = "https://github.com/Concordium/concordium-rust-smart-contracts.git", rev="4d4b024b547a1f120f6d6951cbc409c94f8f146a" }

au_curves = { git = "https://github.com/cryspen/libcrux", rev="2167e9f" } # version = "0.0.3-alpha.3", 
# libcrux-curve25519 = { git = "https://github.com/cryspen/libcrux", rev="6ed6fa307b1a649c902a55dce4054aad1e9cfea8" } # version = "0.0.3-alpha.3", 

quickcheck = "1"
quickcheck_macros = "1"
# bls12_381 = "0.8"

[dev-dependencies]
# criterion = "0.4"
rand = "0.8"

# [features]
# hax_compilation = []
