[package]
name = "hacspec-ovn"
version = "0.1.0"
authors = ["REDACTED"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
hacspec-lib = { path = "../hacspec/lib" }
hax-lib-macros = { path = "../../hax/hax-lib-macros/" }
hacspec-bip-340 = { path = "../bip-340/" } # { path = "https://github.com/hacspec/specs.git" }

group = "0.13"
# group = { git  ="https://github.com/zkcrypto/group" }
bls12_381 = "0.8"

rand_core = "0.6"

hacspec-concordium = { path = "../concordium" } # 4d4b024b547a1f120f6d6951cbc409c94f8f146a
hacspec-concordium-derive = { path = "../concordium-derive" } # 4d4b024b547a1f120f6d6951cbc409c94f8f146a

quickcheck = "1"
quickcheck_macros = "1"

hax-lib = { git = "https://github.com/hacspec/hax", branch = "ssprove_backend_lib_base", version="0.1.0-pre.1" }
# au_curves = { git = "https://github.com/cryspen/libcrux" }
# libcrux-curve25519 = { git = "https://github.com/cryspen/libcrux" }
# libcrux-ed25519 = { git = "https://github.com/cryspen/libcrux" }
libcrux-p256 = { git = "https://github.com/cryspen/libcrux" }


[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[features]
hax_compilation = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }
