[package]
name = "hacspec-sha256"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/sha256.rs"

[dependencies]
hacspec-lib = { path = "../hacspec/lib" }
hacspec-derive = { path = "../hacspec/utils/derive" }
secret_integers = { path = "../hacspec/utils/secret-integers" }
abstract_integers = { path = "../hacspec/utils/abstract-integers" }
