(coq.theory
 (name Hacspec) ; -R flag
 (package coq-hacspec-ssprove)
 (flags -w all)
 (theories
   mathcomp elpi HB deriving ; Mathcomp
   extructures
   Equations
   ConCert stdpp MetaCoq Ltac2 ; ConCert
   ; Jasmin
   SSProve ; SSProve
   )
 ; (libraries <ocaml_libraries>)
 )
; (include_subdirs qualified)
