(coq.theory
 (name Hacspec) ; -R flag
 (package coq-hacspec-ssprove)
 (flags -w all)
 (theories
   mathcomp elpi HB deriving elpi_elpi ; Mathcomp
   extructures
   Equations
   ConCert stdpp MetaCoq Ltac2 ; ConCert
   ; Jasmin
   SSProve ; SSProve
   Stdlib
   )
 ; (libraries <ocaml_libraries>)
 )
; (include_subdirs qualified)
